# ted-f2-intelligence

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
app/: __init__.py  auth.py  config.py  database.py  deps.py  main.py
app/api/: health.py  internal.py  presenters.py  routes.py  schemas.py  ui.py
app/ingestion/: __init__.py  models.py  normalize.py
app/models/: __init__.py  analyst_note.py  app_setting.py  audit_event.py  base.py  enums.py  notice.py  saved_search.py  scan_run.py  user.py
app/repositories/: audit.py  notices.py  scan_runs.py  settings.py  users.py
app/scoring/: __init__.py  engine.py  types.py
app/services/: demo_bootstrap.py  keyword_evidence.py  query_builder.py  scan_service.py  ted_client.py  ted_documents.py  tender_checklist.py
app/templates/: admin.html  base.html  dashboard.html  notice_detail.html  results.html  scan.html
app/utils/: countries.py  csrf.py  logging.py  text.py  time.py
config/: keyword_pack.yaml  search_profiles.yaml  tender_checklist.yaml
docker/: entrypoint.sh
docs/: architecture.md  configuration.md  deployment.md  limitations.md  scoring-rules.md
migrations/: env.py
migrations/versions/: 20260330_0001_initial_schema.py
scripts/: seed_sample_data.py
tests/: conftest.py  test_api_endpoints.py  test_keyword_evidence.py  test_normalization.py  test_query_builder.py  test_repositories.py  test_scoring_engine.py  test_streamlit_results_metrics.py  test_ted_client.py  test_tender_checklist.py
(+4 files in other folders)
