[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbrain-ted-f2-intelligence"
version = "0.1.0"
description = "Internal TED-only tender intelligence platform for cBrain F2"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "cBrain Internal Engineering" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0",
  "httpx>=0.27,<1.0",
  "cachetools>=5.3,<6.0",
  "tenacity>=8.3,<9.0",
  "PyYAML>=6.0,<7.0",
  "python-json-logger>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-asyncio>=0.23,<1.0",
  "respx>=0.21,<1.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
]
streamlit = [
  "streamlit>=1.43,<2.0",
]

[tool.poetry]
package-mode = false
packages = [
  { include = "app" },
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
ignore_missing_imports = true
